--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 
 Auf den folgenden Seiten wirst du nochmal die Grundlagen der Mathematik in der Statistik lernen. Wir lagern hier die Inhalte die sehr mathematisch sind von den angewandten, statistischen Themen aus. Das heißt, du findest hier sehr viel Mathematik und auch Rechenbeispiele. Es wird aber R Code geben - siehe den R Code als den Taschenrechnercode. Das hat den einfachen Grund, das wir eben dann doch mal die Grundlagen in der Mathematik wiederholen müssen. Es kann aber auch sein, dass du gar nicht so viel Mathematik später brauchst - oder wiederkommst, weil du nochmal nachschauen willst, wie du eine Teilstückfläche berechnest. Wir auch immer, hier findest du die Mathematikteile aus meinenen Vorlesungen.
 
-Du findest die [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf ILIAS in dem entsprechenden Modul. Die Klausurfragen zu den einzelnen Vorlesungen in einem Modul werden in den entsprechenden Übungen des Moduls besprochen. Und dann gibt es noch das [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive) über alle Studiengänge hinweg. In der ![](images/youtube.png){fig-align="center" width="55"} [Playlist der Fragen & Antworten](https://www.youtube.com/playlist?list=PLe51bCp9JvEHxsispwEyTp6B9bqNZ1EmJ) findest du nochmal alle Antworten zu den Klausurfragen *kurz* besprochen.
+Du findest die [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf ILIAS in dem Modul "Mathematik und Statistik". Die Klausurfargen bilden das Zentrum der jeweiligen Vorlesung. Und dann gibt es noch das [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive) über alle Studiengänge hinweg. In der ![](images/youtube.png){fig-align="center" width="55"} [Playlist der Fragen & Antworten](https://www.youtube.com/playlist?list=PLe51bCp9JvEHxsispwEyTp6B9bqNZ1EmJ) findest du nochmal alle Antworten zu den Klausurfragen *kurz* besprochen. 
 
 ## Kontakt {#sec-contact-mail}
 
