--- a/probability-distribution.qmd
+++ b/probability-distribution.qmd
@@ -68,18 +68,20 @@ qnorm(0.975, mean = 0, sd = 1) %>% round(2)
 qnorm(0.99, mean = 0, sd = 1) %>% round(2)
 ```
 
-@fig-distribution
+
 
 ## Visualisierung von `pnorm()` und `qnorm()`
 
+In der @fig-distribution sehen wir den Zusammenhang zwischen der Funktion `pnorm(q = 1.96)` und der Funktion `qnorm(p = 0.975)` einmal visualisiert.
+
 ```{r}
-pnorm(q = 1.96)
-qnorm(p = 0.975)
-qnorm(p = 0.025, lower.tail = FALSE)
+pnorm(q = 1.96) %>% round(2)
+qnorm(p = 0.975) %>% round(2)
+qnorm(p = 0.025, lower.tail = FALSE) %>% round(2)
 ```
 
 
-![Test](images/distribution-t.png){fig-align="center" width="100%" #fig-distribution}
+![Der Zusammenhang von `pnorm()` und `qnorm` einmal an einer Standardnormalverteilung visualisiert.](images/distribution-t.png){fig-align="center" width="100%" #fig-distribution}
 
 
 https://rstudio-pubs-static.s3.amazonaws.com/35515_c4ea4e9714af4d888bfc701a37c39815.html
