added text and parts

--- a/index.qmd
+++ b/index.qmd
@@ -1,18 +1,20 @@
 # Willkommen {.unnumbered}
 
+> *"Mir wird applaudiert, weil mich jeder versteht, und Ihnen, weil Sie niemand versteht." --- Charlie Chaplin zu Albert Einstein*
+
 Auf den folgenden Seiten wirst du nochmal die Grundlagen der Mathematik in der Statistik lernen. Wir lagern hier die Inhalte die sehr mathematisch sind von den angewandten, statistischen Themen aus. Das heißt, du findest hier sehr viel Mathematik und auch Rechenbeispiele. Es wird aber R Code geben - siehe den R Code als den Taschenrechnercode. Das hat den einfachen Grund, das wir eben dann doch mal die Grundlagen in der Mathematik wiederholen müssen. Es kann aber auch sein, dass du gar nicht so viel Mathematik später brauchst - oder wiederkommst, weil du nochmal nachschauen willst, wie du eine Teilstückfläche berechnest. Wir auch immer, hier findest du die Mathematikteile aus meinenen Vorlesungen.
 
-Du findest die [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf ILIAS in dem Modul "Mathematik und Statistik". Die Klausurfargen bilden das Zentrum der jeweiligen Vorlesung. Und dann gibt es noch das [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive) über alle Studiengänge hinweg. In der ![](images/youtube.png){fig-align="center" width="55"} [Playlist der Fragen & Antworten](https://www.youtube.com/playlist?list=PLe51bCp9JvEHxsispwEyTp6B9bqNZ1EmJ) findest du nochmal alle Antworten zu den Klausurfragen *kurz* besprochen. 
+Im Weiteren findest du meine gesammelten Klausurfragen für alle Module auf GitHub unter folgendem Link: [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf [ILIAS](https://lms.hs-osnabrueck.de/) im entsprechenden Modul "Mathematik und Statistik". Die Klausurfragen zu den einzelnen Vorlesungen innerhalb des Moduls werden in den entsprechenden Übungen behandelt. Zusätzlich gibt es ein Archiv, das alle bisherigen Klausuren über alle Studiengänge hinweg enthält. Dieses Archiv findest du hier: [Archive aller bisherigen Klausuren](https://github.com/jkruppa/archive).
 
 ## Kontakt {#sec-contact-mail}
 
-Wie erreichst du mich? Am einfachsten über die gute, alte E-Mail. Bitte bachte, dass gerade kurz vor den Prüfungen ich mehr E-Mails kriege. Leider kann es dann einen Tick dauern.
+Noch Fragen? Wie erreichst du mich? Am einfachsten über die gute, alte E-Mail. Bitte beachte, dass gerade kurz vor den Prüfungen ich mehr E-Mails kriege. Leider kann es dann einen Tick dauern.
 
-![](images/mail.png){fig-align="center" width="200"}
+Einfach an [j.kruppa\@hs-osnabrueck.de](mailto:j.kruppa@hs-osnabrueck.de){.email} schreiben. Du findest hier auch eine kurze Formulierungshilfe.
 
-Einfach an [j.kruppa\@hs-osnabrueck.de](mailto:j.kruppa@hs-osnabrueck.de){.email} schreiben. Du findest hier auch eine kurze Formulierungshilfe. Einfach auf den Ausklapppfeil klicken.
+Bitte gib immer in deiner E-Mail dein Modul - was du belegst - mit an. Pro Semester unterrichte ich immer *drei* sehr ähnlich klingende Module. Daher schau nochmal [hier in der Liste](#sec-vorlesungen-hs), wenn du unsicher bist.
 
-::: {.callout-tip collapse="true"}
+::: callout-tip
 ## E-Mailvorlage mit beispielhafter Anrede
 
 Hallo Herr Kruppa,
@@ -25,4 +27,3 @@ Mit freundlichen Grüßen
 
 M. Muster
 :::
-
